Visual fixes
* Horizontal scroll bar do not appear
* Conditions don't go over buttons
* Others font size and adjustments

--- a/scripts/gui/thrive_style.css
+++ b/scripts/gui/thrive_style.css
@@ -54,10 +54,6 @@ body {
   margin: 0;
 }
 
-/* button{
-    background-color: blue;
-} */
-
 /* Videos are centered inside their elements and made to fit */
 video {
   width: 100%;
@@ -535,11 +531,10 @@ div::-webkit-scrollbar-thumb:hover {
   display: inline-block;
   width: 27px;
   height: 27px;
-  margin-bottom: 5px;
-  font-size: 12pt;
   background-size: 27px, 27px;
   background-image: url("../../Textures/gui/bevel/minusButtonHover.png");
   background-position: center;
+  vertical-align: middle;
 }
 
 .minusBtn:hover {
@@ -550,10 +545,9 @@ div::-webkit-scrollbar-thumb:hover {
   display: block;
   margin-left: 5px;
   margin-top: 8px;
-  margin-bottom: 0;
-  width: 100%;
-  height: auto;
-  vertical-align: middle;
+  margin-bottom: 8px;
+  width: calc(100% - 8px);
+  height: 27px;
 }
 
 .condTitle {
@@ -563,7 +557,10 @@ div::-webkit-scrollbar-thumb:hover {
   font-size: 13pt;
   vertical-align: middle;
   margin-left: 5px;
-  padding-bottom: 28px;
+}
+
+#speciesInPatch {
+  font-size: 17px;
 }
 
 #microbeBottomBar {
@@ -2084,16 +2081,23 @@ div::-webkit-scrollbar-thumb:hover {
   width: 99%;
 }
 
-#editorSelectedPatchName {
-  font-size: 26px;
+.editorSelectedPatchTopInformation {
   text-align: center;
   width: 100%;
 }
 
+#editorSelectedPatchName {
+  font-size: 26px;
+}
+
+#editorSelectedPatchSituation {
+  font-size: 18px;
+}
+
+
 #patchInfoBox {
   overflow-y: auto;
-  max-height: 90%;
-  min-height: 90%;
+  height: 80%;
 }
 
 #moveToPatchButton {
